RK: finalise for submission

--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -2,40 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "571dacba-ec4f-4a6b-a681-08c313b44df2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Financial Analysis\n",
-      "----------------------------\n",
-      "Total Months: 86\n",
-      "Total: $38382578\n",
-      "Average  Change: $-2315.12\n",
-      "Greatest Increase in Profits: Feb-2012 ($1926159)\n",
-      "Greatest Decrease in Profits:: Sep-2013 ($-2196167)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from pathlib import Path\n",
     "# importing csv file\n",
     "import csv\n",
     "\n",
-    "# location of csv file we are working on\n",
-    "file_name = \"Resources/budget_data.csv\"\n",
     "\n",
-    "# initializing values we want to calculate\n",
+    "# location of csv file we are working on\n",
+    "file_name = Path(\"Resources/budget_data.csv\")\n",
+    "\n",
+    "# initializing values, we will use this later in the code\n",
     "net_total_amount_of_profit_or_losses_over_the_entire_period = 0\n",
     "changes_in_profit_losses = 0\n",
     "total_changes_in_profit_losses = 0\n",
+    "# place holder to hold total decrease in profit/loss\n",
     "previous_total_decrease_in_profit_losses = 0\n",
+    "# place holder to hold total increase in profit/loss\n",
     "previous_total_increase_in_profit_losses = 0\n",
     "total_months = 0 \n",
     "changes_in_profit_losses = 0\n",
     "\n",
+    "#list initializer\n",
     "greatest_increase_in_profits = []\n",
     "greatest_decrease_in_losses = []\n",
     "previous_row = []\n",
@@ -70,26 +61,19 @@
     "        # initialize the previous_row with row which will act as a current row in next loop\n",
     "        previous_row = row\n",
     "        \n",
-    "\n",
     "        # increment value of total months by 1\n",
     "        total_months += 1\n",
     "        \n",
-    "print(\"Financial Analysis\")\n",
-    "print(\"----------------------------\")\n",
-    "print(f\"Total Months: {total_months}\")\n",
-    "print(f\"Total: ${net_total_amount_of_profit_or_losses_over_the_entire_period}\")\n",
-    "print(f\"Average  Change: ${calculate_average(changes_in_profit_losses, total_months- 1)}\")\n",
-    "print(f\"Greatest Increase in Profits: {greatest_increase_in_profits[0]} (${greatest_increase_in_profits[1]})\")\n",
-    "print(f\"Greatest Decrease in Profits:: {greatest_decrease_in_losses[0]} (${greatest_decrease_in_losses[1]})\")"
+    "# Write the output to the file\n",
+    "with open('output.txt', 'w') as f:\n",
+    "    f.write('Financial Analysis\\n\\n')\n",
+    "    f.write(\"----------------------------\\n\\n\")\n",
+    "    f.write(f\"Total Months: {total_months}\\n\\n\")\n",
+    "    f.write(f\"Total: ${net_total_amount_of_profit_or_losses_over_the_entire_period}\\n\\n\")\n",
+    "    f.write(f\"Average  Change: ${calculate_average(changes_in_profit_losses, total_months- 1)}\\n\\n\")\n",
+    "    f.write(f\"Greatest Increase in Profits: {greatest_increase_in_profits[0]} (${greatest_increase_in_profits[1]})\\n\\n\")\n",
+    "    f.write(f\"Greatest Decrease in Profits: {greatest_decrease_in_losses[0]} (${greatest_decrease_in_losses[1]})\\n\\n\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fe33539-867c-43a1-985e-66e84133452f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
